Fix Breadcrumb Spacing.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -192,7 +192,7 @@ Start: Navbar
 .breadcrumb-nav {
     height: 50px;
     width: 100%;
-    padding: 10px 40px 15px 40px;
+    padding: 15px 40px 15px 40px;
     color: #58666e;
     border-bottom: 1px solid #e0dfdf;
 }
